WIP. split-pane. attempt to fix right panel overflow. 2

--- a/src/components/ui/shadcn/split-pane/SimpleSplitPane.css
+++ b/src/components/ui/shadcn/split-pane/SimpleSplitPane.css
@@ -14,6 +14,7 @@
 
 .splitpane-divider {
     /*background-color: #ddd;*/
+    flex-shrink: 0;
     z-index: 1000;
     transition: background-color .1s ease .4s;
 }
